test/tests/stages/18_structures/invalid_types/extra_credit/other_features/duplicate_struct_types_after_label.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: a
                      Int: 
            CS: 
              CLabel: 
                TIdentifier: foo
                CNull: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: b
                      Int: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
